:sparkles: Feat: OAuth 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,10 @@ spring.jpa.properties.hibernate.format_sql=true
 jwt.issuer=ajufresh@gmail.com
 jwt.secret_key=study-springboot
 
+#OAuth
+spring.security.oauth2.client.registration.google.client-id=48112477477-tlj9g9j9iuaroe73qpk74jv93mojdhms.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+
+
