Hotfix : html 추가

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 	// OAuth2를 사용하기 위한 스타터 추가
   	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
+tasks.withType(JavaCompile) {
+	options.compilerArgs << "-parameters"
+}
 
 tasks.named('test') {
 	useJUnitPlatform()
