--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,9 @@ spring.security.oauth2.client.registration.google.client-id=48112477477-tlj9g9j9
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 
+#Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
 
 
